# monte-carlo-chegg-acquisition

./: .gitignore  README.md
monte-carlo-chegg/: pyproject.toml
monte-carlo-chegg/src/: config.py  financials.py  main.py  scenarios.py  simulation.py  test_utils.py  visualize.py
