[project]
name = "monte-carlo-chegg"
version = "0.1.0"
description = ""
authors = [
    {name = "David Chehet",email = "davidchehet28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
